# c-sockets

./: CMakeLists.txt  Makefile  Makefile_CppUTest.make  Makefile_Production.make  ModuleConfig_LinuxSocket.make  ModuleConfig_Socket.make  ProductConfig_Client.make  ProductConfig_Linux.make  ProductConfig_LinuxServer.make  ProductConfig_Server.make  ProductConfig_TcpServer.make  todo.txt
doc/: about_sockets.txt  linux_system_commands.txt
inc/: LinuxSocket.h  Socket.h  SocketClient.h  SocketPrivate.h  SocketServer.h  UbuntuSystem.h  UnixSocket.h
inc/Linux/: LinuxSocket.h  LinuxSocketOs.h
mocks/LinuxSocket/: UbuntuSystem.cpp  UnixSocket.cpp
mocks/LinuxSocketOs/: LinuxSocketOs.cpp
mocks/Socket/: DummySocket.cpp  DummySocket.h  SocketSystemLayer.cpp  UnixSocket.cpp
mocks/UnixSocket/: UnixSocket.cpp
product/LinuxClient/: client.c
product/LinuxServer/: server.c
products/Client/: Client.c
products/ClientDemo/: CMakeLists.txt  main.c
products/LinuxClient/: client.c
products/LinuxServer/: server.c
products/Server/: Server.c
products/ServerDemo/: CMakeLists.txt  ServerDemo.c
products/TcpServer/: CMakeLists.txt  TcpServer.c
products/UdpClient/: CMakeLists.txt  main.c
products/UdpClient2/: CMakeLists.txt  main.c
products/UdpListener/: CMakeLists.txt  main.c
src/: CMakeLists.txt  Socket.c  SocketClient.c  SocketServer.c
src/Linux/: LinuxSocket.c
src_platform/: SocketSystemLayer.c  SocketSystemLayer.h  UbuntuSystem.c
src_platform/Linux/: UnixSocket.c  main.c
tests/LinuxSocket/: Test_LinuxSocket.cpp  Test_LinuxSocket.h
tests/Socket/: CMakeLists.txt  SocketHelpers.cpp  SocketHelpers.h  TestHelpers.cpp  TestHelpers.h  Test_Socket.cpp  Test_Socket.h  Test_SocketClient.cpp  Test_SocketClient.h  Test_SocketServer.cpp  Test_SocketServer.h
tests/UnixSocket/: Test_UnixSocket.cpp  Test_UnixSocket.h
